# ImageClassificationPackage

./: .coveragerc  README.md  README.rst
ImageClassificationPackage/: .gitignore  CONTRIBUTING.rst  README.rst  setup.cfg  setup.py
ImageClassificationPackage/docs/: conf.py  requirements.txt
ImageClassificationPackage/src/imageclassificationpackage/: __init__.py  make_gallery.py  skeleton.py
ImageClassificationPackage/tests/: conftest.py  test_skeleton.py
docs/: index.rst  requirements.txt
notebooks/: classifier.ipynb
src/imageclassificationpackage/: single_pred_electrode.py
